<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/flexy3big"
    android:orientation="horizontal"
    android:padding="8dip" >

    <LinearLayout
        android:id="@+id/settButtLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="25px"
        android:layout_marginLeft="15px"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/volText"
            android:layout_width="350px"
            android:layout_height="wrap_content"
            android:text="@string/volumeOfSound"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <SeekBar
            android:id="@+id/SeekBar02"
            android:layout_width="350px"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/vibrIntText"
            android:layout_width="350px"
            android:layout_height="wrap_content"
            android:text="@string/vibrointensity"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <SeekBar
            android:id="@+id/SeekBar01"
            android:layout_width="350px"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/sensText"
            android:layout_width="350px"
            android:layout_height="wrap_content"
            android:text="@string/settingsSensivity"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <SeekBar
            android:id="@+id/seekBar1"
            android:layout_width="350px"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/accelCalibr"
            android:layout_width="350px"
            android:layout_height="wrap_content"
            android:layout_marginTop="25px"
            android:text="@string/calibrate" />
    </LinearLayout>

</RelativeLayout>